# charmlibs-pathops

./: .gitignore  .readthedocs.yaml  Makefile  README.md  SECURITY.md  justfile  pyproject.toml  tox.ini
.github/: packages.py
.github/workflows/: docs.yaml  publish-charmlibs-package.yaml  publish-pathops-package.yaml  test-publish-charmlibs-package.yaml  test-publish-pathops-package.yaml  tests.yaml
_charmlibs/src/charmlibs/: __init__.py
_docs/: conf.py  index.md
_docs/.sphinx/: requirements.txt
_docs/.sphinx/_static/: project_specific.css
_docs/how-to/: index.md  python-package.md  python-packages.md
docs/: .custom_wordlist.txt  conf.py  index.md
docs/.sphinx/_static/: project_specific.css
pathops/: README.md  pyproject.toml
pathops/src/charmlibs/pathops/: __init__.py  _container_path.py  _local_path.py  _types.py
pathops/tests/integration/juju/: conftest.py  test_container_path.py  test_machine.py  test_meta.py  test_pathops.py  utils.py
pathops/tests/integration/juju/charms/: pack.sh
pathops/tests/integration/juju/charms/common/: actions.yaml  requirements.txt
pathops/tests/integration/juju/charms/common/src/: common.py
pathops/tests/integration/juju/charms/kubernetes/: charmcraft.yaml
pathops/tests/integration/juju/charms/kubernetes/src/: charm.py  common.py
pathops/tests/integration/juju/charms/machine/: charmcraft.yaml
pathops/tests/integration/juju/charms/machine/src/: charm.py  common.py
pathops/tests/integration/juju/charms/test-kubernetes/: charmcraft.yaml  pyproject.toml
pathops/tests/integration/juju/charms/test-kubernetes/src/: charm.py
pathops/tests/integration/juju/charms/test-machine/: charmcraft.yaml
pathops/tests/integration/juju/charms/test-machine/src/: charm.py
pathops/tests/integration/pebble/: conftest.py  test_container_path.py  utils.py
pathops/tests/unit/: test_local_path.py
src/charmlibs/pathops/: __init__.py  _constants.py  _container_path.py  _errors.py  _fileinfo.py  _functions.py  _helpers.py  _local_path.py  _types.py  _version.txt
tests/: typecheck.py
tests/integration/pebble/: conftest.py  test_container_path.py  test_functions.py  test_local_path.py  utils.py
tests/pebble/: conftest.py  stuff.py  test_container_path.py  test_functions.py  test_helpers.py  test_path_methods.py  utils.py
tests/static/: typecheck_protocol.py
tests/unit/: conftest.py  mocks.py  test_container_path.py  test_functions.py  test_local_path.py  utils.py
